--- a/restaurants/templates/create.html
+++ b/restaurants/templates/create.html
@@ -5,6 +5,10 @@
         <title>Create</title>
     </head>
     <body>
-        
+    	<form action = "{% url "restaurant-create" %}" method = "POST">
+    		{{form.as_p}}
+    		{% csrf_token %}
+    		<input type = "submit" value = "Add Restaurant">
+        </form>
     </body>
 </html>
